--- a/Web_153505_Bybko/Web_153505_Bybko/Views/Shared/_MenuPartial.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko/Views/Shared/_MenuPartial.cshtml
@@ -13,8 +13,8 @@
            asp-controller="Home" asp-action="Index">
             Lab1-2
         </a>
-        <a class="nav-item nav-link badge @(controller == "product" ? "active" : "")" 
-           asp-controller="Product" asp-action="Index">
+        <a class="nav-item nav-link badge @(controller == "book" ? "active" : "")" 
+           asp-controller="Book" asp-action="Index">
             Catalogue
         </a>
         <a class="nav-item nav-link badge @(controller == "admin" ? "active" : "")" 
