--- a/Web_153505_Bybko/Web_153505_Bybko/Views/_ViewImports.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Web_153505_Bybko
 @using Web_153505_Bybko.Models
+@using Web_153505_Bybko.Domain.Entities
+@using Web_153505_Bybko.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
