complete lab4 ura!!!

--- a/Web_153505_Bybko/Web_153505_Bybko/Views/Book/Index.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko/Views/Book/Index.cshtml
@@ -41,7 +41,7 @@
         <div class="col-md-4">
             <div class="card mb-4">
                 <div class="d-flex align-items-center justify-content-center" style="padding: 20px;">
-                    <img src="@book.Image" alt="Book's image'" class="card-img-top" 
+                    <img src="@book.Image" alt="Book's image" class="card-img-top" 
                          style="height: 230px; width: 150px;">
                 </div>      
                 <div class="card-body">
