--- a/Web_153505_Bybko/Web_153505_Bybko/Views/Shared/_UserInfoPartial.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko/Views/Shared/_UserInfoPartial.cshtml
@@ -5,12 +5,12 @@
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
             data-bs-toggle="dropdown" aria-expanded="false">
         User@gmail.com
-        <img src="images/profile_icon.png" width="30" alt="User" class="rounded nav-color"/>
+        <img src="https://localhost:7002/Images/profile_icon.png" width="30" alt="User" class="rounded nav-color" />
     </button>
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <li>
             <span class="dropdown-item-text">
-                <img src="images/profile_icon.png" width="50" alt="User" class="rounded"/>
+                <img src="https://localhost:7002/Images/profile_icon.png" width="50" alt="User" class="rounded" />
                 user@gmail.com
             </span>
         </li>
