--- a/Web_153505_Bybko/Web_153505_Bybko.IdentityServer/Pages/Account/Login/Index.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko.IdentityServer/Pages/Account/Login/Index.cshtml
@@ -49,6 +49,10 @@
                         </form>
                     </div>
                 </div>
+                <div class="card-footer">
+                    <a asp-page="/Account/Register/Index"
+                       asp-route-returnurl="@Model.Input.ReturnUrl">Register</a>
+                </div>
             </div>
         }
 
