--- a/Web_153505_Bybko/Web_153505_Bybko.IdentityServer/Pages/_ViewImports.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko.IdentityServer/Pages/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using Web_153505_Bybko.IdentityServer.Pages
+@using Web_153505_Bybko.IdentityServer.Pages.Register
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
