--- a/Web_153505_Bybko/Web_153505_Bybko/Views/_ViewImports.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using Web_153505_Bybko.Models
 @using Web_153505_Bybko.Domain.Entities
 @using Web_153505_Bybko.Domain.Models
+@using Web_153505_Bybko.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Web_153505_Bybko.TagHelpers.PagerTagHelper, Web_153505_Bybko
