--- a/Web_153505_Bybko/Web_153505_Bybko/Views/Book/Index.cshtml
+++ b/Web_153505_Bybko/Web_153505_Bybko/Views/Book/Index.cshtml
@@ -40,7 +40,9 @@
     </ul>
 </div>
 
-<partial name="_BooksPartial"/>
+<div id="bookList">
+    <partial name="_BooksPartial" />
+</div>
 
 @*<nav aria-label="Page navigation">
     <ul class="pagination">
